# statistics-api

./: .coveragerc  .dockerrc  Dockerfile  README.md  manage.py  mkdocs.yml  pyproject.toml
docs/: index.md
docs/api/: posts.md  posts_history.md
statistics_api/: urls.py  wsgi.py
statistics_api/config/: common.py  local.py
statistics_api/facebook/: apps.py  factories.py  mixings.py  models.py  serializers.py  tests.py  views.py
statistics_api/facebook/migrations/: 0001_initial.py
statistics_api/users/: views.py
statistics_api/users/migrations/: 0003_alter_user_first_name.py
